--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-#gameName{
+/* #gameName{
     color: white;
     background: rgb(107, 10, 116);
 }
@@ -7,8 +7,49 @@
     background:  rgb(107, 10, 116);
 }
 body{
-  background-image: url(../images/crystal.gif )
+  background-image: url(../images/crystal.gif );
 }
-.objective{
-    color: black;
-}
+#objective{
+    color:white;
+} */
+
+ body{
+     background-image: url(../images/crystal.gif)
+
+ }
+
+ #gameName {
+     color: white;
+     background: rgb(107, 10, 116);
+     margin-top: 10px;
+     margin-bottom: 10px;
+     margin-left: 10px;
+     margin-right: 30px;
+     padding-top: 20px;
+     padding-bottom: 30PX;
+     padding-left: 7px;
+     padding-right: 20px;
+     width: 53px;
+     opacity: 0.6;
+     font-weight: 600;
+ }
+
+ .instructions {
+    color: white;
+    background: rgb(107, 10, 116);
+    margin-top: 10px;
+     margin-bottom: 10px;
+     margin-left: 10px;
+     margin-right: 30px;
+     padding-top: 20px;
+     padding-bottom: 30PX;
+     padding-left: 7px;
+     padding-right: 20px;
+     width: 300px;
+     opacity: 0.6;
+     font-weight: 600;
+ }
+
+ #objective {
+
+ }
