--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,43 +13,117 @@ body{
     color:white;
 } */
 
- body{
-     background-image: url(../images/crystal.gif)
+body {
+  background-image: url(../images/crystal.gif);
+}
 
- }
+#gameName {
+  color: white;
+  background: rgb(107, 10, 116);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 7px;
+  padding-right: 20px;
+  width: 53px;
+  opacity: 0.6;
+  font-weight: 600;
+}
 
- #gameName {
-     color: white;
-     background: rgb(107, 10, 116);
-     margin-top: 10px;
-     margin-bottom: 10px;
-     margin-left: 10px;
-     margin-right: 30px;
-     padding-top: 20px;
-     padding-bottom: 30PX;
-     padding-left: 7px;
-     padding-right: 20px;
-     width: 53px;
-     opacity: 0.6;
-     font-weight: 600;
- }
+.instructions {
+  color: white;
+  background: rgb(107, 10, 116);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 7px;
+  padding-right: 20px;
+  width: 300px;
+  opacity: 0.6;
+  font-weight: 600;
+}
 
- .instructions {
-    color: white;
-    background: rgb(107, 10, 116);
-    margin-top: 10px;
-     margin-bottom: 10px;
-     margin-left: 10px;
-     margin-right: 30px;
-     padding-top: 20px;
-     padding-bottom: 30PX;
-     padding-left: 7px;
-     padding-right: 20px;
-     width: 300px;
-     opacity: 0.6;
-     font-weight: 600;
- }
+.objective {
+  background: rgb(107, 10, 116);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 7px;
+  padding-right: 20px;
+  width: 53px;
+  opacity: 0.6;
+  font-weight: 600;
+}
+#crystal {
+  background: rgb(107, 10, 116);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 7px;
+  padding-right: 20px;
+  width: 53px;
+  opacity: 0.6;
+  font-weight: 600;
+}
+#score {
+  background: rgb(107, 10, 116);
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 7px;
+  padding-right: 20px;
+  width: 150px;
+  opacity: 0.6;
+  font-weight: 600;
+}
 
- #objective {
+.button {
+  position: relative;
+  background-color: #4caf50;
+  border: none;
+  font-size: 28px;
+  color: #ffffff;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
+}
 
- }
+.button:after {
+  content: "";
+  background: #90ee90;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s;
+}
+
+.button:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s;
+}
