--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,6 @@ body {
   font-weight: 600;
 }
 #crystal {
-  background: rgb(107, 10, 116);
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
@@ -77,6 +76,24 @@ body {
   opacity: 0.6;
   font-weight: 600;
 }
+
+* {
+box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+/* //.row:after {
+  content: "";
+  clear: both;
+  display: table;
+} */
+
 #score {
   background: rgb(107, 10, 116);
   margin-top: 10px;
@@ -94,12 +111,9 @@ body {
 
 .button {
   position: relative;
-  background-color: #4caf50;
+  background-color: rgb(107, 10, 116);
   border: none;
-  font-size: 28px;
-  color: #ffffff;
-  padding: 20px;
-  width: 200px;
+  width: 100px;
   text-align: center;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
@@ -110,7 +124,7 @@ body {
 
 .button:after {
   content: "";
-  background: #90ee90;
+  background: #bc90ee;
   display: block;
   position: absolute;
   padding-top: 300%;
