--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,11 +23,11 @@ body {
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
-  margin-right: 30px;
+  margin-right: 100px;
   padding-top: 20px;
   padding-bottom: 30px;
   padding-left: 7px;
-  padding-right: 20px;
+  padding-right: 200px;
   width: 53px;
   opacity: 0.6;
   font-weight: 600;
@@ -77,23 +77,24 @@ body {
   font-weight: 600;
 }
 
-* {
+/* * {
 box-sizing: border-box;
 }
 
 .column {
-  float: left;
+    position: relative;
+  left: 100px;
   width: 25%;
   padding: 5px;
 }
 
 /* Clearfix (clear floats) */
-/* //.row:after {
+/* .row:after {
   content: "";
   clear: both;
   display: table;
-} */
-
+}
+ */ 
 #score {
   background: rgb(107, 10, 116);
   margin-top: 10px;
@@ -107,6 +108,7 @@ box-sizing: border-box;
   width: 150px;
   opacity: 0.6;
   font-weight: 600;
+  color: white;
 }
 
 .button {
@@ -141,3 +143,4 @@ box-sizing: border-box;
   opacity: 1;
   transition: 0s;
 }
+
