--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body{
 
 body {
   background-image: url(../images/crystal.gif);
+  background-repeat: no-repeat;
 }
 
 #gameName {
@@ -75,6 +76,7 @@ body {
   width: 53px;
   opacity: 0.6;
   font-weight: 600;
+  float: left;
 }
 
 /* * {
