--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,8 @@
-/* #gameName{
-    color: white;
-    background: rgb(107, 10, 116);
-}
-.instructions{
-    color: black;
-    background:  rgb(107, 10, 116);
-}
-body{
-  background-image: url(../images/crystal.gif );
-}
-#objective{
-    color:white;
-} */
 
 body {
   background-image: url(../images/crystal.gif);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #gameName {
@@ -29,7 +16,7 @@ body {
   padding-bottom: 30px;
   padding-left: 7px;
   padding-right: 200px;
-  width: 53px;
+  width: 10px;
   opacity: 0.6;
   font-weight: 600;
 }
@@ -42,7 +29,7 @@ body {
   margin-left: 10px;
   margin-right: 30px;
   padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   padding-left: 7px;
   padding-right: 20px;
   width: 300px;
@@ -79,7 +66,7 @@ body {
   float: left;
 }
 
-/* * {
+{
 box-sizing: border-box;
 }
 
@@ -90,13 +77,12 @@ box-sizing: border-box;
   padding: 5px;
 }
 
-/* Clearfix (clear floats) */
-/* .row:after {
+Clearfix (clear floats) 
+ .row:after {
   content: "";
   clear: both;
   display: table;
 }
- */ 
 #score {
   background: rgb(107, 10, 116);
   margin-top: 10px;
